# main-app/src/main/java/org/booking_hotel/files/model/FileSaveRequest.java
@@ -1,12 +1,12 @@
-package org.booking_hotel.files.model;
+    package org.booking_hotel.files.model;
 
-import jakarta.validation.constraints.NotNull;
+    import jakarta.validation.constraints.NotNull;
 
-public record FileSaveRequest(
-        Long id,
-        @NotNull String name,
-        @NotNull String urlPath,
-        @NotNull String type,
-        @NotNull Long size
-) {
-}
+    public record FileSaveRequest(
+            Long id,
+            @NotNull String name,
+            @NotNull String urlPath,
+            @NotNull String type,
+            @NotNull Long size
+    ) {
+    }
